small text correction and removed overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,6 @@ html {
 body {
         font-family: "bavro";
         background-color: var(--color-main);
-        overflow-x:hidden;
 }
 
 .d3-tip {
